solution/httpd-route/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - image: ubi8/httpd-24
          name: httpd-24
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: html-volume

      volumes:
        - name: html-volume
          persistentVolumeClaim:
            claimName: httpd-pvc
