solution/httpd-route/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpd
  type: ClusterIP
