solution/httpd-route/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
  name: httpd
spec:
  port:
    targetPort: http-8080
  tls:
    termination: edge
  to:
    kind: "Service"
    name: httpd
    weight: 100
